# MicroOnlineGo

./: .classpath  .project  MicroOnlineGo.eml  README.md
client/java/: .classpath  MicroOnlineGo.eml  README.md
client/java/client/src/main/: Board.java  Client.java  Core.java  Room.java  Stone.java  Type.java  User.java
client/java/client/src/main/communication/: Connect.java  Connect.properties  Decoder.java  Encoder.java
client/java/client/src/main/view/: ChatBox.fxml  ChatBox.java  ChessBoard.fxml  ChessBoard.java  CreateRoom.fxml  CreateRoomController.java  Game.fxml  GameController.java  Lobby.fxml  LobbyController.java  Login.fxml  LoginController.java  Signup.fxml  SignupController.java  Timer.fxml  Timer.java
client/java/client/src/test/: ConnectTest.java  DecoderTest.java  EncoderTest.java
client/java/client/src/util/: MessageQueue.java  UserComparator.java
client/java/docs/: README.md
client/src/main/: Client.java  UserInfo.java
client/src/main/communication/: Connect.java  Encode.java
client/src/main/lobby/: Table.java  TableCell.java
client/src/main/view/: ChatBox.java  ChessBox.fxml  ChessBox.java  CreateRoomController.java  Game.fxml  GameController.java  LobbyController.java  LoginController.java  SignInController.java  Timer.fxml  Timer.java
docs/: Design.md  msg.json
server/: Makefile.am  README.md  config.h.in  config.status  configure  configure.ac
server/include/redbud/: tokenizer.h
server/include/redbud/parser/: json_parser.h
server/lib/muduo/: Makefile  Makefile.am  Makefile.in
server/lib/muduo/base/: Makefile  Makefile.am  Makefile.in
server/lib/muduo/base/.deps/: AsyncLogging.Po  Condition.Po
server/lib/muduo/net/: Makefile  Makefile.am  Makefile.in
server/lib/muduo/net/http/: Makefile.am
server/lib/muduo/net/inspect/: Makefile.am
server/lib/muduo/net/protobuf/: Makefile.am
server/lib/muduo/net/protorpc/: Makefile.am
server/lib/redbud/parser/: Makefile  Makefile.am  Makefile.in  exception.cc  json.cc  json_parser.cc  reader.cc
server/lib/zdb/: Makefile  Makefile.in  config.status  configure  libtool
server/lib/zdb/autom4te.cache/: output.1  requests  traces.0  traces.1
server/lib/zdb/src/: xconfig.h
server/lib/zdb/test/: Makefile  Makefile.in
server/sql/: init.sql
server/src/: Account.cc  Account.h  BookSeat.cc  BookSeat.h  ChessInfo.cc  ChessInfo.h  Entrance.cc  Entrance.h  GameResult.cc  GameResult.h  GoServer.cc  GoServer.h  GroupChat.cc  GroupChat.h  Handshake.cc  Handshake.h  LobbyInfo.cc  LobbyInfo.h  Login.cc  Login.h  Logout.cc  Logout.h  Makefile.am  NewRival.cc  NewRival.h  NewRoom.cc  NewRoom.h  Nickname.cc  Nickname.h  PacketParser.cc  PacketParser.h  PairManager.cc  PairManager.h  Player.cc  Player.h  PlayerInfo.cc  PlayerInfo.h  PlayersInfo.cc  PlayersInfo.h  Proto.h  (+20 more)
